--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -13,7 +13,11 @@ server {
         if ($request_uri ~ ^/api/(.+)$) {
             set $new_request_uri $1;
         }
-        proxy_pass http://$upstream_backend/$new_request_uri;
+        proxy_pass $scheme://$upstream_backend/$new_request_uri;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_read_timeout 180s;
     }
 
     location / {
